Updated for 2023 eBird taxonomy, added getObservationsByFamily() method, experimenting with various message packing formats for data file (not ready to launch yet)

--- a/tsconfig.commonjs.json
+++ b/tsconfig.commonjs.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "target": "es5",
     "moduleResolution": "Node",
+    "resolveJsonModule": true,
     "declaration": true,
     "outDir": "./dist/cjs"
   },
