--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
+    "brick.json": "^0.0.6",
+    "brotli": "^1.3.3",
+    "compressed-json": "^1.0.16",
+    "copyfiles": "^2.4.1",
     "jsdoc-to-markdown": "^7.1.1",
+    "msgpackr": "^1.9.5",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
     "webpack": "^5.72.0",
