--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "es6",
     "target": "es6",
     "moduleResolution": "Node",
+    "resolveJsonModule": true,
     "declaration": true,
     "outDir": "./dist/global"
   },
